// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty render 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
/>
`;

exports[`search results empty 1`] = `
<div
  className="bblfsh-uast-viewer__not-found"
>
  Nothing found
</div>
`;

exports[`search results render 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-item uast-viewer__node-2"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible collapsed"
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
  </div>
</div>
`;

exports[`tree render 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-item uast-viewer__node-1"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible "
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
    <div
      className="uast-content"
    />
  </div>
</div>
`;

exports[`tree render with locations 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-item uast-viewer__node-1"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible "
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
    <div
      className="uast-content"
    >
      <div
        className="uast-item"
      >
        <div
          className="uast-title uast-title-collapsible "
          onClick={[Function]}
        >
          <span
            className="uast-property-name"
          >
            @pos
          </span>
          <summary
            className="uast-label"
          >
            Position
          </summary>
        </div>
        <div
          className="uast-content"
        >
          <div
            className="uast-item"
          >
            <div
              className="uast-title"
            >
              <span
                className="uast-property-name"
              >
                @type
              </span>
              <span
                className="uast-value string"
              >
                uast:Position
              </span>
            </div>
          </div>
          <div
            className="uast-item"
          >
            <div
              className="uast-title uast-title-collapsible "
              onClick={[Function]}
            >
              <span
                className="uast-property-name"
              >
                start
              </span>
              <summary
                className="uast-label"
              >
                map&lt;string,any&gt;
              </summary>
            </div>
            <div
              className="uast-content"
            >
              <div
                className="uast-item"
              >
                <div
                  className="uast-title"
                >
                  <span
                    className="uast-property-name"
                  >
                    @type
                  </span>
                  <span
                    className="uast-value string"
                  >
                    uast:Position
                  </span>
                </div>
              </div>
              <div
                className="uast-item"
              >
                <div
                  className="uast-title"
                >
                  <span
                    className="uast-property-name"
                  >
                    line
                  </span>
                  <span
                    className="uast-value number"
                  >
                    1
                  </span>
                </div>
              </div>
              <div
                className="uast-item"
              >
                <div
                  className="uast-title"
                >
                  <span
                    className="uast-property-name"
                  >
                    col
                  </span>
                  <span
                    className="uast-value number"
                  >
                    1
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="uast-item"
          >
            <div
              className="uast-title uast-title-collapsible "
              onClick={[Function]}
            >
              <span
                className="uast-property-name"
              >
                end
              </span>
              <summary
                className="uast-label"
              >
                map&lt;string,any&gt;
              </summary>
            </div>
            <div
              className="uast-content"
            >
              <div
                className="uast-item"
              >
                <div
                  className="uast-title"
                >
                  <span
                    className="uast-property-name"
                  >
                    @type
                  </span>
                  <span
                    className="uast-value string"
                  >
                    uast:Position
                  </span>
                </div>
              </div>
              <div
                className="uast-item"
              >
                <div
                  className="uast-title"
                >
                  <span
                    className="uast-property-name"
                  >
                    line
                  </span>
                  <span
                    className="uast-value number"
                  >
                    2
                  </span>
                </div>
              </div>
              <div
                className="uast-item"
              >
                <div
                  className="uast-title"
                >
                  <span
                    className="uast-property-name"
                  >
                    col
                  </span>
                  <span
                    className="uast-value number"
                  >
                    2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
